--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <h1 style="color:blue;">DevOps Sample 1</h1>
     <p style="color:red;">Welcome from Visual studio code and Git</p>
     <p style="color:red;">Borji Abdeloaudoud</p>
-	<p style="color:red;"> Ayoub JEBJI </p>
+    <p style="color:red;"> Ayoub JEBJI </p>
+    <p> Update </p>
     <p>test</p>
 
 </body>
